# bazel_python

./: BUILD.bazel  LICENSE  MODULE.bazel  requirements.txt
lib_evaluation/: BUILD.bazel
lib_evaluation/scripts/: hello_world.py  run_example.py
lib_evaluation/src/lib_evaluation/: lib_a.py  lib_b.py
lib_evaluation/test/: lib_evaluation_test.py
